unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/DonorApi__Gift_In_Kind__c.object-meta.xml
<CustomObject>
    <description>Record and receipt non-cash gifts including gifts in kind, and stock gifts.</description>
    <label>Gift In-Kind</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Non-Cash Gift ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gifts In-Kind</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>