unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Account__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account (organization or household) providing the non-cash gift.</description>
    <inlineHelpText>The account (organization or household) providing the non-cash gift.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Gifts In-Kind</relationshipLabel>
    <relationshipName>Gifts_In_Kind</relationshipName>
    <type>Lookup</type>
</CustomField>