unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Asset_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Asset_Sale_Amount__c</fullName>
    <description>The total amount the asset was sold for, not including sales agent commissions and other sales related costs.</description>
    <inlineHelpText>The total amount the asset was sold for, not including sales agent commissions and other sales related costs.</inlineHelpText>
    <label>Asset Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>