unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** Link to the related Business Group.</description>
    <inlineHelpText>**System Calculated/Override/Required** Link to the related Business Group.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipLabel>Gifts In-Kind</relationshipLabel>
    <relationshipName>Gifts_In_Kind</relationshipName>
    <type>Lookup</type>
</CustomField>