unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Calculated_Value__c</fullName>
    <description>**System Calculated** Total of Gift In Kind Value + Net Asset Value. Provides a single column for reporting on the value of the non-cash gifts.</description>
    <formula>DonorApi__GIK_Value__c + DonorApi__Net_Asset_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Total of Gift In Kind Value + Net Asset Value. Provides a single column for reporting on the value of the non-cash gifts.
GIK_Value__c + Net_Asset_Value__c</inlineHelpText>
    <label>Calculated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>