unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Category__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Category__c</fullName>
    <description>**Required** Select a category for the non-cash gift. This specifies the type of good, service, or asset donated.</description>
    <inlineHelpText>**Required** Select a category for the non-cash gift. This specifies the type of good, service, or asset donated.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Securities</fullName>
            </value>
            <value>
                <fullName>Mutual Funds</fullName>
            </value>
            <value>
                <fullName>Closely Held Stock</fullName>
            </value>
            <value>
                <fullName>IRA Charitable Rollover</fullName>
            </value>
            <value>
                <fullName>Other Assets</fullName>
            </value>
            <value>
                <fullName>Goods</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>