unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact (individual person) providing the non-cash gift.</description>
    <inlineHelpText>The contact (individual person) providing the non-cash gift.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gifts In-Kind</relationshipLabel>
    <relationshipName>Gifts_In_Kind</relationshipName>
    <type>Lookup</type>
</CustomField>