unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Date_Expected__c</fullName>
    <description>The date the non-cash gift is expected to be received.</description>
    <inlineHelpText>The date the non-cash gift is expected to be received.</inlineHelpText>
    <label>Date Expected</label>
    <type>Date</type>
</CustomField>