unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Date_Received__c</fullName>
    <description>The date the non-cash gift was received.</description>
    <inlineHelpText>The date the non-cash gift was received.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>