unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Date_Sold__c</fullName>
    <description>The date the asset was sold.</description>
    <inlineHelpText>The date the asset was sold.</inlineHelpText>
    <label>Date Sold</label>
    <type>Date</type>
</CustomField>