unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Description__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Description__c</fullName>
    <description>Free form text field for notes/description of the non-cash gift.</description>
    <inlineHelpText>Free form text field for notes/description of the non-cash gift.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>