unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Do_Not_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Do_Not_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary indicator for non-cash gifts that should not be acknowledged. Default is unchecked.</description>
    <inlineHelpText>Primary indicator for non-cash gifts that should not be acknowledged. Default is unchecked.</inlineHelpText>
    <label>Do Not Acknowledge</label>
    <type>Checkbox</type>
</CustomField>