unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Donor_Link__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Donor_Link__c</fullName>
    <description>**System Calculated** A link to the related donor&#39;s record as determined by the value of the &quot;Entity&quot; field.</description>
    <formula>IF(ISPICKVAL(DonorApi__Entity__c,&quot;Account&quot;),HYPERLINK(&quot;/&quot; &amp; DonorApi__Account__r.Id, DonorApi__Account__r.Name), HYPERLINK(&quot;/&quot; &amp; DonorApi__Contact__r.Id, DonorApi__Contact__r.FirstName &amp; &quot; &quot; &amp; DonorApi__Contact__r.LastName))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** A link to the related donor&#39;s record as determined by the value of the &quot;Entity&quot; field.</inlineHelpText>
    <label>Donor</label>
    <type>Text</type>
</CustomField>