unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Entity__c</fullName>
    <description>**Required** Select &quot;Account&quot; if the provider of the non-cash gift is an account, select &quot;Contact&quot; if the provided is a contact.</description>
    <inlineHelpText>**Required** Select &quot;Account&quot; if the provider of the non-cash gift is an account, select &quot;Contact&quot; if the provided is a contact.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>