unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Expected_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Expected_Asset_Value__c</fullName>
    <description>The expected value of the asset at the time of commitment.</description>
    <inlineHelpText>The expected value of the asset at the time of commitment.</inlineHelpText>
    <label>Expected Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>