unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Fund__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override/Required** The fund related to the non-cash gift.</description>
    <inlineHelpText>**System Calculated/Override/Required** The fund related to the non-cash gift.</inlineHelpText>
    <label>Fund</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Gifts In-Kind</relationshipLabel>
    <relationshipName>Gifts_In_Kind</relationshipName>
    <type>Lookup</type>
</CustomField>