unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__GIK_Value__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__GIK_Value__c</fullName>
    <description>The total value of the goods and/or services provided.</description>
    <inlineHelpText>The total value of the goods and/or services provided.</inlineHelpText>
    <label>Goods/Services Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>