unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Is_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Is_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Primary indicator for non-cash gifts that have been acknowledged. Default is unchecked.</description>
    <inlineHelpText>Primary indicator for non-cash gifts that have been acknowledged. Default is unchecked.</inlineHelpText>
    <label>Is Acknowledged</label>
    <type>Checkbox</type>
</CustomField>