unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Net_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Net_Asset_Value__c</fullName>
    <description>**System Calculated** Asset Sale Amount - (Sales Agent Commission + Other Costs of Sale)</description>
    <formula>DonorApi__Asset_Sale_Amount__c - (DonorApi__Sales_Agent_Commission__c + DonorApi__Other_Costs_of_Sale__c )</formula>
    <inlineHelpText>**System Calculated** Asset Sale Amount - (Sales Agent Commission + Other Costs of Sale)</inlineHelpText>
    <label>Net Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>