unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Other_Costs_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Other_Costs_of_Sale__c</fullName>
    <description>Other fees and costs incurred related to the asset.</description>
    <inlineHelpText>Other fees and costs incurred related to the asset.</inlineHelpText>
    <label>Other Costs of Sale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>