unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Received_Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Received_Asset_Value__c</fullName>
    <description>The total value of the asset on the day it was received.</description>
    <inlineHelpText>The total value of the asset on the day it was received.</inlineHelpText>
    <label>Received Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>