unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Sales_Agent_Commission__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Sales_Agent_Commission__c</fullName>
    <description>The total commission paid to the sales agent of the asset.</description>
    <inlineHelpText>The total commission paid to the sales agent of the asset.</inlineHelpText>
    <label>Sales Agent Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>