unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Sales_Agent_Company__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Sales_Agent_Company__c</fullName>
    <description>The name of the company employing the sales agent responsible for selling the asset.</description>
    <inlineHelpText>The name of the company employing the sales agent responsible for selling the asset.</inlineHelpText>
    <label>Sales Agent Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>