unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Sales_Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Sales_Agent_Contact__c</fullName>
    <description>The name of the primary sales agent for the asset.</description>
    <inlineHelpText>The name of the primary sales agent for the asset.</inlineHelpText>
    <label>Sales Agent Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>