unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Sales_Agent_Email__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Sales_Agent_Email__c</fullName>
    <description>The email address for the sales agent related to the asset.</description>
    <inlineHelpText>The email address for the sales agent related to the asset.</inlineHelpText>
    <label>Sales Agent Email</label>
    <type>Email</type>
</CustomField>