unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Sales_Agent_Fax__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Sales_Agent_Fax__c</fullName>
    <description>The fax number for the sales agent related to the asset.</description>
    <inlineHelpText>The fax number for the sales agent related to the asset.</inlineHelpText>
    <label>Sales Agent Fax</label>
    <type>Phone</type>
</CustomField>