unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Sales_Agent_Phone__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Sales_Agent_Phone__c</fullName>
    <description>The phone number for the sales agent related to the asset.</description>
    <inlineHelpText>The phone number for the sales agent related to the asset.</inlineHelpText>
    <label>Sales Agent Phone</label>
    <type>Phone</type>
</CustomField>