unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Status__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Status__c</fullName>
    <description>**Required** The current status of non-cash gifts defaults to committed and is required for all non-cash gifts.</description>
    <inlineHelpText>**Required** The current status of non-cash gifts defaults to committed and is required for all non-cash gifts.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>