unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Stock_Name__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Stock_Name__c</fullName>
    <description>The name of the stock/security (if applicable) for gifts of stock.</description>
    <inlineHelpText>The name of the stock/security (if applicable) for gifts of stock.</inlineHelpText>
    <label>Stock Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>