unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/fields/DonorApi__Stock_Symbol__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Stock_Symbol__c</fullName>
    <description>The ticker (stock) symbol for the security.</description>
    <inlineHelpText>The ticker (stock) symbol for the security.</inlineHelpText>
    <label>Stock Symbol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>