unpackaged/main/default/objects/DonorApi__Gift_In_Kind__c/listViews/DonorApi__All.listView-meta.xml
<ListView>
    <fullName>DonorApi__All</fullName>
    <columns>NAME</columns>
    <columns>DonorApi__Account__c</columns>
    <columns>DonorApi__Contact__c</columns>
    <columns>DonorApi__Description__c</columns>
    <columns>DonorApi__Status__c</columns>
    <columns>DonorApi__Category__c</columns>
    <columns>DonorApi__Fund__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>